# dlt_airflow_lineage

./: .gitignore  README.md  pyproject.toml  requirements.txt
dags/: lineage_combine.py  lineage_reporting.py  openlineage_preflight_check.py  pg_lineage_dag.py  rfam_lineage.py  rfam_vanilla.py
dlt/: rfam_to_duckdb.py
